--- a/KinectSDKandOF/KinectSDKandOF.vcxproj
+++ b/KinectSDKandOF/KinectSDKandOF.vcxproj
@@ -39,7 +39,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(MSRKINECTSDK)\inc;$(IncludePath)</IncludePath>
+    <IncludePath>$(MSRKINECTSDK)\inc;D:\msradt2\kinect_redmond\unmanaged_core\inc_public;$(IncludePath)</IncludePath>
     <ReferencePath>$(ReferencePath)</ReferencePath>
     <LibraryPath>$(MSRKINECTSDK)\lib;$(LibraryPath)</LibraryPath>
     <OutDir>.\bin</OutDir>
@@ -54,12 +54,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;POCO_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\liningy\KinectedConference\KinectSDKandOF\src;C:\Users\liningy\KinectedConference\KinectSDKandOF\bin;C:\Users\liningy\KinectedConference\KinectSDKandOF\src\examples;C:\Users\liningy\KinectedConference\KinectSDKandOF\src\addons;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\graphics;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\app;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\sound;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\utils;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\communication;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\video;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\events;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glut\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\quicktime\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\rtAudio\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freetype\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freetype\include\freetype2;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freeImage\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\fmodex\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\videoInput\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glee\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glu\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\poco\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\addons;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\liningy\KinectedConference - oldOFlib\KinectSDKandOF\src;C:\Users\liningy\KinectedConference - oldOFlib\KinectSDKandOF\bin;C:\Users\liningy\KinectedConference - oldOFlib\KinectSDKandOF\src\examples;C:\Users\liningy\KinectedConference - oldOFlib\KinectSDKandOF\src\addons;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\graphics;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\app;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\sound;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\utils;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\communication;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\video;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworks\events;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glut\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\quicktime\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\rtAudio\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freetype\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freetype\include\freetype2;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freeImage\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\fmodex\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\videoInput\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glee\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glu\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\poco\include;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\addons;C:\Program Files %28x86%29\Microsoft Research KinectSDK\inc;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\addons\ofxOpenCv\src;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\addons\ofxOpenCv\libs\opencv\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glut\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworksCompiled\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\poco\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glu\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glee\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\videoInput\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\fmodex\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\quicktime\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freetype\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\FreeImage\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\rtAudio\lib\vs2010</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glut\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworksCompiled\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\poco\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glu\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\glee\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\videoInput\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\fmodex\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\quicktime\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\freetype\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\FreeImage\lib\vs2010;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\rtAudio\lib\vs2010;C:\Program Files %28x86%29\Microsoft Research KinectSDK\lib;C:\Users\liningy\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\addons\ofxOpenCv\libs\opencv\lib\vs2010</AdditionalLibraryDirectories>
       <AdditionalDependencies>advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;dsound.lib;fmodex_vc.lib;FreeImage.lib;GLee.lib;glu32.lib;GLu32.lib;glut32.lib;libfreetype.lib;openframeworksLibDebug.lib;OpenGL32.lib;PocoFoundationmtd.lib;PocoNetmtd.lib;PocoUtilmtd.lib;PocoXMLmtd.lib;qtmlClient.lib;rtAudioD.lib;setupapi.lib;videoInput.lib;amstrmid.lib;avrt.lib;dmoguids.lib;Msdmo.lib;MSRKinectNUI.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>atlthunk.lib;LIBC.lib;LIBCMT;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
     </Link>
@@ -82,6 +83,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="conference.cpp" />
     <ClCompile Include="grabVideo.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\addons\ofxFBOTexture.cpp" />
@@ -91,6 +93,8 @@
     <ClCompile Include="testApp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="conference.h" />
+    <ClInclude Include="eventsObject.h" />
     <ClInclude Include="grabVideo.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\addons\ofxFBOTexture.h" />
@@ -105,11 +109,6 @@
     <None Include="bin\data\shaders\simpleBlurHorizontal.vert" />
     <None Include="bin\data\shaders\simpleBlurVertical.frag" />
     <None Include="bin\data\shaders\simpleBlurVertical.vert" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Desktop\openframeworks\of_preRelease_v0062_vs2010_FAT\libs\openFrameworksCompiled\project\vs2010\openframeworksLib.vcxproj">
-      <Project>{5837595d-aca9-485c-8e76-729040ce4b0b}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
