--- a/KinectSDKandOF/KinectSDKandOF.vcxproj
+++ b/KinectSDKandOF/KinectSDKandOF.vcxproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <ClCompile Include="button.cpp" />
     <ClCompile Include="conference.cpp" />
+    <ClCompile Include="gesture.cpp" />
     <ClCompile Include="grabVideo.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SketchShareView.cpp" />
@@ -101,6 +102,7 @@
     <ClInclude Include="button.h" />
     <ClInclude Include="conference.h" />
     <ClInclude Include="eventsObject.h" />
+    <ClInclude Include="gesture.h" />
     <ClInclude Include="grabVideo.h" />
     <ClInclude Include="menuSelection.h" />
     <ClInclude Include="resource.h" />
